-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.1
-
None
-
I3bd36a4dfa23feea2254be2df50fce064e8fe2af
The color scheme setting should depend on the selected theme.
- Themes should define a default color scheme, i.e. Dark for Dark theme, Default for Default theme
- Changing the color scheme should affect only the color scheme for this theme. Switching between themes should switch the color scheme to the color scheme setting for this theme
E.g. if I regularly switch between dark and default theme (e.g. depending on daylight), I want to automatically switch to the color scheme that I want for that theme without going to the color scheme settings manually.