TextEditor: Define Color Scheme entry per Theme

The TextEditor settings do not remember a global Color Scheme setting,
anymore, but rather a Color Scheme ber Theme. A .creatortheme can define
a default TextEditor Color Scheme (overridable in the settings). This
makes switching of schemes more pleasant.

Taks-number: QTCREATORBUG-15229
Change-Id: I3bd36a4dfa23feea2254be2df50fce064e8fe2af
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@theqtcompany.com>
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>