src/plugins/texteditor/fontsettingspage.cpp
@@ -32,6 +32,7 @@
 #include <utils/fileutils.h>
 #include <utils/stringutils.h>
 #include <utils/qtcassert.h>
+#include <utils/theme/theme.h>
 
 #include <QFileDialog>
 #include <QFontDatabase>
@@ -346,6 +347,9 @@ QWidget *FontSettingsPage::widget()
         d_ptr->m_widget = new QWidget;
         d_ptr->m_ui = new Ui::FontSettingsPage;
         d_ptr->m_ui->setupUi(d_ptr->m_widget);
+        d_ptr->m_ui->colorSchemeGroupBox->setTitle(
+                    tr("Color Scheme for Qt Creator Theme \"%1\"")
+                    .arg(Utils::creatorTheme()->displayName()));
         d_ptr->m_ui->schemeComboBox->setModel(d_ptr->m_schemeListModel);
 
         d_ptr->m_ui->fontComboBox->setCurrentFont(d_ptr->m_value.family());
